--- a/resume/index.html
+++ b/resume/index.html
@@ -218,7 +218,7 @@
                     }
                 ],
                 skills:['html','css','js','less/scss','vue.js','underscore.js','webpack','gulp','mongoose','node.js','es6','react','react-native'],
-                profile:'本人毕业于景德镇学院数学与信息工程系，有4年的前端开发工作经验，喜欢关注 web 前端相关新技术，对于新技术有很强的学习兴趣。',
+                profile:'毕业于景德镇学院数学与信息工程系，有4年的前端开发工作经验，喜欢关注 web 前端相关新技术，对于新技术有很强的学习兴趣。',
                 experience:[
                     {data:'',job:'',content:'',conpany:''}
                 ],
@@ -241,7 +241,7 @@
         { 
             path: '/', 
             component: resume,
-            name:'简历'
+            name:'简历卡片'
         },{ 
             path: '/profile', 
             component: profile,
