--- a/resume/index.html
+++ b/resume/index.html
@@ -50,6 +50,7 @@
                 </div>
             </div>
             <div class="panel-right">
+                <!-- 自我描述 -->
                 <div class="card background-card">
                     <div class="icon">
                         <i class="fs-lg icon-board"></i><span class="mobile-title">自我描述</span>
@@ -61,12 +62,14 @@
                         <li>热爱前端这份工作，也热爱一切美好的事物，对于我来说，是一种责任、是一种快乐。</li>
                     </ul>
                 </div>
+                <!-- 教育经历 -->
                 <div class="card background-card">
                     <div class="icon">
                         <i class="fs-lg icon-graduation-cap"></i><span class="mobile-title">教育经历</span>
                     </div>
                     <p class="info content">景德镇学院 —— 数学与信息工程系 —— 数字多媒体专业</p>
                 </div>
+                <!-- 工作经历 -->
                 <div class="card background-card">
                     <div class="icon">
                         <i class="fs-lg icon-office"></i><span class="mobile-title">工作经历</span>
@@ -78,11 +81,12 @@
                         </dt>
                         <dd>
                             <ul>
+                                <li>根据UI设计稿编写静态页面</li>
                                 <li>根据产品需求文档，进行 web 前端开发，前端主体框架选型，搭建基础框架</li>
-                                <li>根据设计提供的设计稿编写静态页面</li>
-                                <li>Javascript 数据处理、Ajax 交互开发、前端公共组件开发</li>
-                                <li>负责配合后台开发人员，完成页面的交互及接口对接</li>
-                                <li>负责团队的前端开发质量，提高效率，实施前后端分离</li>
+                                <li>使用webpack、gulp、node前端项目代码</li>
+                                <li>微信小程序，微信</li>
+                                <li>使用vue.js全家桶，实施前后端分离，提升用户体验，和开发效率</li>
+                                <li>负责配合后台开发人员，完成页面的交互及接口对接，数据渲染</li>
                                 <li>负责前端技术的完善，以用户为中心，不断尝试前端新技术，提升团队水平</li>
                             </ul>
                         </dd>
@@ -94,12 +98,11 @@
                         </dt>
                         <dd>
                             <ul>
-                                <li>根据产品需求文档，进行 web 前端开发，前端主体框架选型，搭建基础框架</li>
-                                <li>根据设计提供的设计稿编写静态页面</li>
-                                <li>Javascript 数据处理、Ajax 交互开发、前端公共组件开发</li>
+                                <li>根据UI设计稿编写静态页面</li>
+                                <li>使用gulp管理维护前端代码</li>
+                                <li>jquery/zepto 数据处理、Ajax 交互开发、前端公共组件开发</li>
                                 <li>负责配合后台开发人员，完成页面的交互及接口对接</li>
-                                <li>负责团队的前端开发质量，提高效率，实施前后端分离</li>
-                                <li>负责前端技术的完善，以用户为中心，不断尝试前端新技术，提升团队水平</li>
+                                <li>根据需求封装通用js插件</li>
                             </ul>
                         </dd>
                     </dl>
@@ -123,12 +126,44 @@
                 </div>
                 <div class="card background-card">
                     <div class="icon">
-                        <i class="fs-lg icon-tools"></i><span class="mobile-title">技能评价</span>
+                        <i class="fs-lg icon-child"></i><span class="mobile-title">项目经验</span>
+                    </div>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>永乐惠充app</p>
+                            <p class="common-p">cordova + jquery + gulp + less + nginx</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>将app所有页面</li>
+                                <li>独自mock数据实现页面交互、数据绑定、在线支付等能</li>
+                                <li>接入后端、测试联调</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>永乐惠充微信小程序</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>Photoshop对UI设计图进行切片，小程序界面实现</li>
+                                <li>独自mock数据实现页面交互、数据绑定、在线支付等能</li>
+                                <li>接入后端、测试联调</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                </div>
+                <!-- 技能标签 -->
+                <div class="card background-card">
+                    <div class="icon">
+                        <i class="fs-lg icon-tools"></i><span class="mobile-title">技能标签</span>
                     </div>
                     <p class="content">
                         <span class="skill-targ">html</span>
                         <span class="skill-targ">css</span>
                         <span class="skill-targ">js</span>
+                        <span class="skill-targ">jquery/zepto</span>
                         <span class="skill-targ">less/scss</span>
                         <span class="skill-targ">vue.js</span>
                         <span class="skill-targ">underscore.js</span>
