--- a/resume/index.html
+++ b/resume/index.html
@@ -83,7 +83,7 @@
                             <ul>
                                 <li>根据UI设计稿编写静态页面</li>
                                 <li>根据产品需求文档，进行 web 前端开发，前端主体框架选型，搭建基础框架</li>
-                                <li>使用webpack、gulp、node前端项目代码</li>
+                                <li>使用webpack、gulp、node管理维护前端代码</li>
                                 <li>微信小程序，微信</li>
                                 <li>使用vue.js全家桶，实施前后端分离，提升用户体验，和开发效率</li>
                                 <li>负责配合后台开发人员，完成页面的交互及接口对接，数据渲染</li>
@@ -131,12 +131,12 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>永乐惠充app</p>
-                            <p class="common-p">cordova + jquery + gulp + less + nginx</p>
+                            <p class="common-p">技术栈：cordova + jquery + gulp + less + nginx</p>
                         </dt>
                         <dd>
                             <ul>
                                 <li>将app所有页面</li>
-                                <li>独自mock数据实现页面交互、数据绑定、在线支付等能</li>
+                                <li>独自mock数据实现页面交互、数据绑定、数据提交、文件上传、在线支付等功能</li>
                                 <li>接入后端、测试联调</li>
                             </ul>
                         </dd>
@@ -148,8 +148,30 @@
                         <dd>
                             <ul>
                                 <li>Photoshop对UI设计图进行切片，小程序界面实现</li>
-                                <li>独自mock数据实现页面交互、数据绑定、在线支付等能</li>
+                                <li>独自mock数据实现页面交互、数据绑定、数据提交、文件上传、在线支付等功能</li>
                                 <li>接入后端、测试联调</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>永乐生活微信站</p>
+                            <p class="common-p">技术栈：微信JSSDK + jquery + jsp</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>......</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>永乐生活代理商前台</p>
+                            <p class="common-p">技术栈：jquery + jsp</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>......</li>
                             </ul>
                         </dd>
                     </dl>
