--- a/resume/index.html
+++ b/resume/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="detail">
                         <span class="icon"><i class="icon fs-lg icon-phone"></i></span>
-                        <span class="info">18521708248</span>
+                        <span class="info">176 7163 5808</span>
                     </div>
                     <div class="detail">
                         <span class="icon"><i class="icon fs-lg icon-mail"></i></span>
