--- a/resume/index.html
+++ b/resume/index.html
@@ -174,6 +174,61 @@
                             </ul>
                         </dd>
                     </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>永乐收钱宝</p>
+                            <p class="common-p">技术栈：jquery + jsp</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>......</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>永乐惠充微信站</p>
+                            <p class="common-p">技术栈：jquery + jsp</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>......</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>怡乐购pc端</p>
+                            <p class="common-p">技术栈：jquery + jsp</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>......</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>怡乐购微信端</p>
+                            <p class="common-p">技术栈：jquery + jsp</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>......</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>怡乐购app</p>
+                            <p class="common-p">技术栈：jquery + jsp</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>......</li>
+                            </ul>
+                        </dd>
+                    </dl>
                 </div>
                 <!-- 技能标签 -->
                 <div class="card background-card">
