--- a/resume/index.html
+++ b/resume/index.html
@@ -166,7 +166,7 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>永乐生活代理商前台</p>
-                            <p class="common-p">技术栈：jquery + jsp</p>
+                            <p class="common-p">技术：jquery + jsp</p>
                         </dt>
                         <dd>
                             <ul>
@@ -177,7 +177,7 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>永乐收钱宝</p>
-                            <p class="common-p">技术栈：jquery + jsp</p>
+                            <p class="common-p">技术：jquery + jsp</p>
                         </dt>
                         <dd>
                             <ul>
@@ -188,7 +188,7 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>永乐惠充微信站</p>
-                            <p class="common-p">技术栈：jquery + jsp</p>
+                            <p class="common-p">技术：jquery + jsp</p>
                         </dt>
                         <dd>
                             <ul>
@@ -199,7 +199,7 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>怡乐购pc端</p>
-                            <p class="common-p">技术栈：jquery + jsp</p>
+                            <p class="common-p">技术：jquery + jsp</p>
                         </dt>
                         <dd>
                             <ul>
@@ -210,7 +210,7 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>怡乐购微信端</p>
-                            <p class="common-p">技术栈：jquery + jsp</p>
+                            <p class="common-p">技术：jquery + jsp</p>
                         </dt>
                         <dd>
                             <ul>
@@ -221,7 +221,7 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>怡乐购app</p>
-                            <p class="common-p">技术栈：jquery + jsp</p>
+                            <p class="common-p">技术：jquery + jsp</p>
                         </dt>
                         <dd>
                             <ul>
